<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:background="@drawable/backdrop">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rant."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textColor="#FDFDFD" android:textSize="36sp"
            android:fontFamily="@font/pacifico" app:layout_constraintVertical_bias="0.308" android:id="@+id/title"/>
    <TextView
            android:text="English (United States)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/language"
            android:textColor="#AEAEB2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.13" android:fontFamily="@font/nunito" android:textSize="14sp"/>
    <TextView
            android:text="Have an account? Log In."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login"
            android:textColor="#FDFDFD" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.94" android:fontFamily="@font/nunito_semibold"
            android:textSize="14sp"/>
    <TextView
            android:text="By singing up, you agree to our Terms and Privacy Policy."
            android:layout_width="209dp"
            android:layout_height="42dp" android:id="@+id/license"
            android:textColor="#AEAEB2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.83" android:fontFamily="@font/nunito"
            android:gravity="center" android:textSize="13sp"/>
    <EditText
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fullNameEditText"
            android:textColor="#FDFDFD"
            android:background="@drawable/round_corners_111111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/nunito"
            android:textSize="15sp" android:hint="Full Name" android:textColorHint="#8A8A8A"
            android:paddingLeft="20dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"/>
    <EditText
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:textColor="#FDFDFD"
            android:background="@drawable/round_corners_111111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/nunito" android:textSize="15sp" android:hint="Email"
            android:textColorHint="#8A8A8A" android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.53"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:textColor="#FDFDFD"
            android:background="@drawable/round_corners_111111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.61"
            android:fontFamily="@font/nunito"
            android:textSize="15sp" android:hint="Password" android:textColorHint="#8A8A8A" android:paddingLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="Sign Up"
            android:layout_width="350dp"
            android:layout_height="45dp" android:id="@+id/signupButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.73" android:textColor="#FDFDFD"
            android:background="@drawable/round_corners_0f1923"
            android:fontFamily="@font/nunito_semibold" android:textSize="15sp"
            android:radius="5dip"
            android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>
